--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,16 @@
         </a>
       </div>
       <ul class="nav navbar-nav navbar-right">
+        {% if request.endpoint != None %}
+        <li>
+          <form class="navbar-form navbar-right" action="/recipe" method="POST">
+            <input name="s" class="form-control" placeholder="Search Recipe" id="search">
+            <button class="btn search-btn">
+              <span class="fa fa-search"></span>
+            </button>
+          </form>
+        </li>
+        {% endif %}
         {% if not g.user %}
         <li><a href="/signup">Sign up</a></li>
         <li><a href="/login">Log in</a></li>
@@ -34,7 +44,7 @@
           </a>
         </li>
         <li><a href="#">Favorites</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="/logout">Log out</a></li>
         {% endif %}
       </ul>
