--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,18 +2,15 @@
 
 {% block content %}
 
-<div class="row">
-
-    <aside class="col-md-4 col-lg-3 col-sm-12" id="home-aside">
-        <div class="card user-card">
-            <div>
-                <a href="/users/{{ g.user.id }}" class="card-link">
-                    <img src="{{ g.user.image_url }}" alt="Image for {{ g.user.username }}" class="card-image">
-                    <p>@{{ g.user.username }}</p>
-                </a>
-            </div>
-        </div>
-    </aside>
+<div>
+    <img src="{{ user.image_url }}" alt="Image for {{ user.username }}">
+    <p class="profile-name">@{{ g.user.username }}</p>
+</div>
+<div>
+    <a href="/user/{{ user.id }}/edit" class="btn">Edit Profile</a>
+    <form method="POST" action="/user/{{ user.id }}/delete">
+        <button class="btn">Delete Profile</button>
+    </form>
 </div>
 
 {% endblock %}
