--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,9 +18,8 @@
 
     <button class="btn btn-primary btn-block btn-lg">Sign me up!</button>
   </form>
-  <div id="create-account-wrap">
-    <p>Already have an account? <a href="/login">Log in!</a>
-    <p>
+  <div id="login-account-wrap">
+    <p>Already have an account? <a href="/login">Log in!</a></p>
   </div>
 </div>
 
