--- a/templates/login.html
+++ b/templates/login.html
@@ -20,8 +20,7 @@
     <button class="btn btn-primary btn-block btn-lg">Log in</button>
   </form>
   <div id="create-account-wrap">
-    <p>Don't have an account? <a href="/signup">Sign Up!</a>
-    <p>
+    <p>Don't have an account? <a href="/signup">Sign Up!</a></p>
   </div>
 </div>
 
