--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div>
-    <img src="{{ user.image_url }}" alt="Image for {{ user.username }}">
+    <img class="profile-img" src="{{ user.image_url }}" alt="Image for {{ user.username }}">
     <p class="profile-name">@{{ g.user.username }}</p>
 </div>
 <div>
